# skin_tg_bot

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
bot/: loader.py  main.py
bot/data/: config.py
bot/db/: models.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 1b9a7d1e591f_test.py  e7525ef25ae0_deleted_user_table.py
bot/exceptions/: __init__.py  exceptions.py
bot/handlers/user/: __init__.py  payment.py  pre_invoice_process.py
bot/handlers/user/callbacks/: catalog.py  category_page.py  ext_slider.py  skins_slider.py
bot/handlers/user/commands/: help.py  shop.py  start.py
bot/keyboards/inline/: __init__.py  category.py  payment.py  skin_type.py  slider.py  sub_category.py
bot/middlewares/: __init__.py  db.py
bot/states/: __init__.py  shop.py
bot/utils/: callbacks.py  notify_admins.py  set_bot_commands.py
bot/utils/api/: skins.py
database/: init_db.sql
